# School

./: .gitmodules
'big' projects/MustatRenkaat/: index.html
'big' projects/Taitajat2024/: README.md  cart.php  index.php  shop.php  style.css
Klinoff with a Breeze/: CMakeLists.txt  README.md  breeze_data.txt  config.mod  constants.mod  klinoff_with_a_breeze.f90  weather_types.mod  weather_utils.mod
MustatRenkaat/: index.html  index.php  js.js  lo.php  lol.html
ennakkoteht/: index copy.html  index.html  info.txt  php.php
ennakkoteht/test/: index.html  js.js
moodle_teht/2/: css.css
moodle_teht/Navigointi1/: etusivu.html
moodle_teht/OtO-kirjasto/: db_teht1.txt  file.php
moodle_teht/OtOk/: SQL PRO TIPS.md  html.html
moodle_teht/SQL/: 2.sql  3.sql  4.sql  5.sql  6.sql
moodle_teht/Tent/: TEntti.html  ss.html
moodle_teht/api/NukeSim/backend/: .gitignore  CMakeLists.txt  make.bat  nuke_facts.json  run.bat
moodle_teht/api/NukeSim/backend/ATRC/: LICENSE.txt
moodle_teht/api/NukeSim/backend/ATRC/docs/: docs.md
moodle_teht/api/NukeSim/backend/ATRC/include/: ATRC.hpp
moodle_teht/api/NukeSim/backend/inc/: crypt.hh  database.hh  http.hh  server.hh
moodle_teht/api/NukeSim/backend/libs/: ATRC.lib
moodle_teht/api/NukeSim/backend/src/: crypt.cc  database.cc  http.cc  http_endpoints.cc  main.cc  models.cc  server.cc
moodle_teht/dump/: Mikä voi estää asiakaspalvelijaa palvele.md  msg.txt  msgbox.vbs
moodle_teht/javascrpt tehtävät/: html.html
moodle_teht/parityö/: OlioOhj22.html  s.html
moodle_teht/response1/: icndex.html
seesarp/: README.md
(+260 files in other folders)
